<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/catalogFragment"
              android:title="@string/catalog"/>

        <item android:id="@+id/cartFragment"
              android:title="@null"
              app:actionLayout="@layout/menu_basket_layout" />

        <item android:id="@+id/promoFragment"
              android:title="@string/promotions"/>

        <item android:id="@+id/myBonusFragment"
              android:title="@string/bonuses"/>

        <item android:id="@+id/personalAreaFragment"
              android:title="@string/personal_area"/>

        <item android:id="@+id/aboutCompanyFragment"
              android:title="@string/about_company"/>

        <item android:id="@+id/aboutProgramFragment"
              android:title="@string/about_program"/>

        <item android:id="@+id/shopsOnMapFragment"
              android:title="@string/shops_on_map"/>

    </group>
</menu>